test/expected/explain_fo_less_eq_greater_2rck_i++default.out
explain friend int operator<=>(const S&, const S&) = default
        ^
9: error: invalid operator "<=>" return type "int"; must be "auto", "std::partial_ordering", "std::strong_ordering", or "std::weak_ordering"
